project/src/parser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    KEYWORD_redo
    KEYWORD_unless
    BLOCK_END
    KEYWORD___ENCODING__
    BITANDEQUAL
    KEYWORD_next
    SQUOTES
    KEYWORD_END
    KEYWORD_self
    KEYWORD_when
    MINUSEQUAL
    KEYWORD_nil
    OR
    DIVEQUAL
    KEYWORD_or
    IFF
    LOGICALANDEQUAL
    KEYWORD_retry
    DOUBLESTAR
    KEYWORD_undef
    COLON
    SIGIL_DOLLAR
    DOUBLE_COLON
    DOUBLESTAREQUAL
    KEYWORD_false
    KEYWORD_definedQ
    SHIFTLEQUAL
    AND
    NOT
    KEYWORD_not
    KEYWORD_yield
    KEYWORD_until
    KEYWORD_ensure
    TRIPLEDOT
    QUESTION_MARK
    MODEQUAL
    QUESTIONCOLON
    KEYWORD_true
    LOGICALOREQUAL
    KEYWORD___END__
    PLUSEQUAL
    KEYWORD_super
    KEYWORD_alias
    MULTIPLYEQUAL
    SHIFTREQUAL
    KEYWORD___LINE__
    KEYWORD_BEGIN
    BLOCK_BEGIN
    KEYWORD_begin
    DQUOTES
    TRIPLEEQUAL
    PIPEEQUAL
    KEYWORD_and
    KEYWORD___FILE__
    KEYWORD_rescue
    KEYWORD_module
    DOLLAR
    BACK_SLASH
    KEYWORD_case
    BITXOREQUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> top_top_compstmt
Rule 2     top_top_compstmt -> statements opt_terms
Rule 3     statements -> statement
Rule 4     statements -> statements terms statement
Rule 5     statement -> top_stmt
Rule 6     statement -> func_defn
Rule 7     statement -> class_defn
Rule 8     statement -> VARIABLES DOT VARIABLES OPEN_PAREN arguments CLOSE_PAREN
Rule 9     statement -> VARIABLES DOT VARIABLES OPEN_PAREN CLOSE_PAREN
Rule 10    statement -> VARIABLES DOT VARIABLES arguments
Rule 11    statement -> CONSTANTS DOT KEYWORD_new OPEN_PAREN arguments CLOSE_PAREN
Rule 12    statement -> CONSTANTS DOT KEYWORD_new OPEN_PAREN CLOSE_PAREN
Rule 13    statement -> CONSTANTS DOT KEYWORD_new arguments
Rule 14    class_defn -> KEYWORD_class CONSTANTS newline class_stmts opt_terms KEYWORD_end
Rule 15    class_stmts -> class_stmt
Rule 16    class_stmts -> class_stmts terms class_stmt
Rule 17    class_stmts -> none
Rule 18    class_stmt -> class_mlhs EQUAL class_mrhs
Rule 19    class_stmt -> class_func
Rule 20    class_mrhs -> literal
Rule 21    literal -> INT_CONSTANTS
Rule 22    literal -> FLOAT_CONSTANTS
Rule 23    literal -> STRING_CONSTANTS
Rule 24    literal -> BOOLEAN_CONSTANTS
Rule 25    literal -> CHAR_CONSTANTS
Rule 26    literal -> SIGIL_AT
Rule 27    literal -> SIGIL_DOUBLE_AT
Rule 28    class_mlhs -> class_mlhs terms SIGIL_DOUBLE_AT
Rule 29    class_mlhs -> SIGIL_DOUBLE_AT
Rule 30    class_func -> KEYWORD_def fname OPEN_PAREN arguments CLOSE_PAREN class_method_stmts opt_terms KEYWORD_end
Rule 31    class_func -> KEYWORD_def fname arguments class_method_stmts opt_terms KEYWORD_end
Rule 32    class_func -> KEYWORD_def fname OPEN_PAREN CLOSE_PAREN class_method_stmts opt_terms KEYWORD_end
Rule 33    class_method_stmts -> class_method_stmt
Rule 34    class_method_stmts -> class_method_stmts terms class_method_stmt
Rule 35    class_method_stmts -> none
Rule 36    class_method_stmt -> class_method_mlhs EQUAL class_method_mrhs
Rule 37    class_method_stmt -> KEYWORD_return class_method_ret_arg
Rule 38    class_method_stmt -> puts_stmt
Rule 39    class_method_mlhs -> class_method_mlhs terms SIGIL_AT
Rule 40    class_method_mlhs -> SIGIL_AT
Rule 41    class_method_mlhs -> SIGIL_DOUBLE_AT
Rule 42    class_method_mrhs -> literal
Rule 43    class_method_mrhs -> VARIABLES
Rule 44    class_method_ret_arg -> class_method_arg_expr
Rule 45    class_method_ret_arg -> literal
Rule 46    class_method_ret_arg -> class_method_ret_arg COMMA class_method_arg_expr
Rule 47    class_method_ret_arg -> class_method_ret_arg COMMA literal
Rule 48    class_method_arg_expr -> SIGIL_AT EQUAL literal
Rule 49    class_method_arg_expr -> SIGIL_DOUBLE_AT EQUAL literal
Rule 50    func_defn -> KEYWORD_def fname OPEN_PAREN arguments M_13 CLOSE_PAREN func_stmts opt_terms KEYWORD_end M_14
Rule 51    func_defn -> KEYWORD_def fname OPEN_PAREN CLOSE_PAREN M_18 func_stmts opt_terms KEYWORD_end M_15
Rule 52    fname -> VARIABLES
Rule 53    fname -> CONSTANTS
Rule 54    arguments -> VARIABLES M_12 COMMA arguments
Rule 55    arguments -> CONSTANTS M_12 COMMA arguments
Rule 56    arguments -> VARIABLES M_12
Rule 57    arguments -> CONSTANTS M_12
Rule 58    M_12 -> <empty>
Rule 59    M_13 -> <empty>
Rule 60    M_18 -> <empty>
Rule 61    M_14 -> <empty>
Rule 62    M_15 -> <empty>
Rule 63    func_call_stmt -> fname2 OPEN_PAREN call_arg CLOSE_PAREN M_17
Rule 64    func_call_stmt -> mlhs EQUAL fname2 OPEN_PAREN call_arg CLOSE_PAREN M_17
Rule 65    M_17 -> <empty>
Rule 66    fname2 -> VARIABLES
Rule 67    fname2 -> CONSTANTS
Rule 68    call_arg -> primary M_16 COMMA call_arg
Rule 69    call_arg -> primary M_16
Rule 70    call_arg -> none
Rule 71    M_16 -> <empty>
Rule 72    loop_stmt -> KEYWORD_break
Rule 73    exit_stmt -> KEYWORD_exit
Rule 74    puts_stmt -> KEYWORD_puts mrhs
Rule 75    puts_stmt -> KEYWORD_puts expr
Rule 76    func_stmts -> func_stmt
Rule 77    func_stmts -> func_stmts terms func_stmt
Rule 78    func_stmts -> none
Rule 79    func_stmt -> top_stmt
Rule 80    func_ret_arg -> primary
Rule 81    primary -> INT_CONSTANTS
Rule 82    primary -> BOOLEAN_CONSTANTS
Rule 83    primary -> CONSTANTS
Rule 84    primary -> VARIABLES
Rule 85    primary -> array
Rule 86    top_stmt -> stmt
Rule 87    top_stmt -> KEYWORD_if expr3 opt_then M_1 gen_stmts opt_terms M_2 elsif_tail opt_else_stmt KEYWORD_end M_6
Rule 88    top_stmt -> KEYWORD_while M_7 expr3 opt_do M_8 gen_stmts2 opt_terms KEYWORD_end M_9
Rule 89    top_stmt -> KEYWORD_for VARIABLES KEYWORD_in for_range opt_do M_10 gen_stmts2 opt_terms KEYWORD_end M_11
Rule 90    M_1 -> <empty>
Rule 91    M_2 -> <empty>
Rule 92    M_6 -> <empty>
Rule 93    M_7 -> <empty>
Rule 94    M_8 -> <empty>
Rule 95    M_9 -> <empty>
Rule 96    M_10 -> <empty>
Rule 97    M_11 -> <empty>
Rule 98    gen_stmts -> top_stmt
Rule 99    gen_stmts -> gen_stmts terms top_stmt
Rule 100   gen_stmts -> none
Rule 101   gen_stmts2 -> top_stmt
Rule 102   gen_stmts2 -> gen_stmts2 terms top_stmt
Rule 103   gen_stmts2 -> none
Rule 104   stmt -> expr
Rule 105   stmt -> expr1
Rule 106   stmt -> puts_stmt
Rule 107   stmt -> loop_stmt
Rule 108   stmt -> exit_stmt
Rule 109   stmt -> func_call_stmt
Rule 110   stmt -> KEYWORD_return func_ret_arg
Rule 111   opt_else_stmt -> KEYWORD_else gen_stmts opt_terms
Rule 112   opt_else_stmt -> none
Rule 113   elsif_tail -> none
Rule 114   elsif_tail -> KEYWORD_elsif expr3 opt_then M_3 gen_stmts opt_terms M_4 elsif_tail
Rule 115   M_3 -> <empty>
Rule 116   M_4 -> <empty>
Rule 117   opt_then -> KEYWORD_then
Rule 118   opt_then -> newline
Rule 119   opt_do -> KEYWORD_do
Rule 120   opt_do -> newline
Rule 121   for_range -> for_range_variables DOUBLEDOT for_range_variables
Rule 122   for_range_variables -> INT_CONSTANTS
Rule 123   for_range_variables -> VARIABLES
Rule 124   for_range_variables -> CONSTANTS
Rule 125   expr -> mlhs EQUAL mrhs
Rule 126   mlhs -> VARIABLES
Rule 127   mlhs -> CONSTANTS
Rule 128   mlhs -> array
Rule 129   mrhs -> expr1
Rule 130   mrhs -> str_expr
Rule 131   mrhs -> KEYWORD_gets
Rule 132   mrhs -> OPEN_BRACKET CLOSE_BRACKET
Rule 133   mrhs -> VARIABLES DOT VARIABLES OPEN_PAREN arguments CLOSE_PAREN
Rule 134   mrhs -> VARIABLES DOT VARIABLES OPEN_PAREN CLOSE_PAREN
Rule 135   mrhs -> VARIABLES DOT VARIABLES
Rule 136   mrhs -> CONSTANTS DOT KEYWORD_new OPEN_PAREN arguments CLOSE_PAREN
Rule 137   mrhs -> CONSTANTS DOT KEYWORD_new
Rule 138   mrhs -> CONSTANTS DOT KEYWORD_new OPEN_PAREN CLOSE_PAREN
Rule 139   str_expr -> STRING_CONSTANTS
Rule 140   expr1 -> expr3
Rule 141   expr3 -> expr3 LOGICALOR expr4
Rule 142   expr3 -> expr4
Rule 143   expr4 -> expr4 LOGICALAND expr5
Rule 144   expr4 -> expr5
Rule 145   expr5 -> expr6 DOUBLEEQUAL expr6
Rule 146   expr5 -> expr6 NOTEQUAL expr6
Rule 147   expr5 -> expr6
Rule 148   expr6 -> expr7 LESSEQUAL expr7
Rule 149   expr6 -> expr7 LESS expr7
Rule 150   expr6 -> expr7 GREATER expr7
Rule 151   expr6 -> expr7 GREATEREQUAL expr7
Rule 152   expr6 -> expr7
Rule 153   expr6 -> BOOLEAN_CONSTANTS
Rule 154   expr7 -> expr7 BITXOR expr8
Rule 155   expr7 -> expr7 PIPE expr8
Rule 156   expr7 -> expr8
Rule 157   expr8 -> expr8 BITAND expr9
Rule 158   expr8 -> expr9
Rule 159   expr9 -> expr9 SHIFTL expr10
Rule 160   expr9 -> expr9 SHIFTR expr10
Rule 161   expr9 -> expr10
Rule 162   expr10 -> expr10 PLUS expr11
Rule 163   expr10 -> expr10 MINUS expr11
Rule 164   expr10 -> expr11
Rule 165   expr11 -> expr11 MULTIPLY expr13
Rule 166   expr11 -> expr11 DIV expr13
Rule 167   expr11 -> expr11 MOD expr13
Rule 168   expr11 -> expr13
Rule 169   expr13 -> OPEN_PAREN expr1 CLOSE_PAREN
Rule 170   expr13 -> uexpr INT_CONSTANTS
Rule 171   expr13 -> CONSTANTS
Rule 172   expr13 -> VARIABLES
Rule 173   expr13 -> array
Rule 174   array -> VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
Rule 175   uexpr -> none
Rule 176   uexpr -> PLUS
Rule 177   uexpr -> MINUS
Rule 178   uexpr -> BITNOT
Rule 179   uexpr -> BITCOMP
Rule 180   opt_terms -> none
Rule 181   opt_terms -> terms
Rule 182   terms -> term
Rule 183   terms -> terms term
Rule 184   term -> DELIM
Rule 185   term -> newline
Rule 186   none -> <empty>

Terminals, with rules where they appear

AND                  : 
BACK_SLASH           : 
BITAND               : 157
BITANDEQUAL          : 
BITCOMP              : 179
BITNOT               : 178
BITXOR               : 154
BITXOREQUAL          : 
BLOCK_BEGIN          : 
BLOCK_END            : 
BOOLEAN_CONSTANTS    : 24 82 153
CHAR_CONSTANTS       : 25
CLOSE_BRACKET        : 132 174
CLOSE_PAREN          : 8 9 11 12 30 32 50 51 63 64 133 134 136 138 169
COLON                : 
COMMA                : 46 47 54 55 68
CONSTANTS            : 11 12 13 14 53 55 57 67 83 124 127 136 137 138 171
DELIM                : 184
DIV                  : 166
DIVEQUAL             : 
DOLLAR               : 
DOT                  : 8 9 10 11 12 13 133 134 135 136 137 138
DOUBLEDOT            : 121
DOUBLEEQUAL          : 145
DOUBLESTAR           : 
DOUBLESTAREQUAL      : 
DOUBLE_COLON         : 
DQUOTES              : 
EQUAL                : 18 36 48 49 64 125
FLOAT_CONSTANTS      : 22
GREATER              : 150
GREATEREQUAL         : 151
IFF                  : 
INT_CONSTANTS        : 21 81 122 170
KEYWORD_BEGIN        : 
KEYWORD_END          : 
KEYWORD___ENCODING__ : 
KEYWORD___END__      : 
KEYWORD___FILE__     : 
KEYWORD___LINE__     : 
KEYWORD_alias        : 
KEYWORD_and          : 
KEYWORD_begin        : 
KEYWORD_break        : 72
KEYWORD_case         : 
KEYWORD_class        : 14
KEYWORD_def          : 30 31 32 50 51
KEYWORD_definedQ     : 
KEYWORD_do           : 119
KEYWORD_else         : 111
KEYWORD_elsif        : 114
KEYWORD_end          : 14 30 31 32 50 51 87 88 89
KEYWORD_ensure       : 
KEYWORD_exit         : 73
KEYWORD_false        : 
KEYWORD_for          : 89
KEYWORD_gets         : 131
KEYWORD_if           : 87
KEYWORD_in           : 89
KEYWORD_module       : 
KEYWORD_new          : 11 12 13 136 137 138
KEYWORD_next         : 
KEYWORD_nil          : 
KEYWORD_not          : 
KEYWORD_or           : 
KEYWORD_puts         : 74 75
KEYWORD_redo         : 
KEYWORD_rescue       : 
KEYWORD_retry        : 
KEYWORD_return       : 37 110
KEYWORD_self         : 
KEYWORD_super        : 
KEYWORD_then         : 117
KEYWORD_true         : 
KEYWORD_undef        : 
KEYWORD_unless       : 
KEYWORD_until        : 
KEYWORD_when         : 
KEYWORD_while        : 88
KEYWORD_yield        : 
LESS                 : 149
LESSEQUAL            : 148
LOGICALAND           : 143
LOGICALANDEQUAL      : 
LOGICALOR            : 141
LOGICALOREQUAL       : 
MINUS                : 163 177
MINUSEQUAL           : 
MOD                  : 167
MODEQUAL             : 
MULTIPLY             : 165
MULTIPLYEQUAL        : 
NOT                  : 
NOTEQUAL             : 146
OPEN_BRACKET         : 132 174
OPEN_PAREN           : 8 9 11 12 30 32 50 51 63 64 133 134 136 138 169
OR                   : 
PIPE                 : 155
PIPEEQUAL            : 
PLUS                 : 162 176
PLUSEQUAL            : 
QUESTIONCOLON        : 
QUESTION_MARK        : 
SHIFTL               : 159
SHIFTLEQUAL          : 
SHIFTR               : 160
SHIFTREQUAL          : 
SIGIL_AT             : 26 39 40 48
SIGIL_DOLLAR         : 
SIGIL_DOUBLE_AT      : 27 28 29 41 49
SQUOTES              : 
STRING_CONSTANTS     : 23 139
TRIPLEDOT            : 
TRIPLEEQUAL          : 
VARIABLES            : 8 8 9 9 10 10 43 52 54 56 66 84 89 123 126 133 133 134 134 135 135 172 174
error                : 
newline              : 14 118 120 185

Nonterminals, with rules where they appear

M_1                  : 87
M_10                 : 89
M_11                 : 89
M_12                 : 54 55 56 57
M_13                 : 50
M_14                 : 50
M_15                 : 51
M_16                 : 68 69
M_17                 : 63 64
M_18                 : 51
M_2                  : 87
M_3                  : 114
M_4                  : 114
M_6                  : 87
M_7                  : 88
M_8                  : 88
M_9                  : 88
arguments            : 8 10 11 13 30 31 50 54 55 133 136
array                : 85 128 173
call_arg             : 63 64 68
class_defn           : 7
class_func           : 19
class_method_arg_expr : 44 46
class_method_mlhs    : 36 39
class_method_mrhs    : 36
class_method_ret_arg : 37 46 47
class_method_stmt    : 33 34
class_method_stmts   : 30 31 32 34
class_mlhs           : 18 28
class_mrhs           : 18
class_stmt           : 15 16
class_stmts          : 14 16
elsif_tail           : 87 114
exit_stmt            : 108
expr                 : 75 104
expr1                : 105 129 169
expr10               : 159 160 161 162 163
expr11               : 162 163 164 165 166 167
expr13               : 165 166 167 168
expr3                : 87 88 114 140 141
expr4                : 141 142 143
expr5                : 143 144
expr6                : 145 145 146 146 147
expr7                : 148 148 149 149 150 150 151 151 152 154 155 174
expr8                : 154 155 156 157
expr9                : 157 158 159 160
fname                : 30 31 32 50 51
fname2               : 63 64
for_range            : 89
for_range_variables  : 121 121
func_call_stmt       : 109
func_defn            : 6
func_ret_arg         : 110
func_stmt            : 76 77
func_stmts           : 50 51 77
gen_stmts            : 87 99 111 114
gen_stmts2           : 88 89 102
literal              : 20 42 45 47 48 49
loop_stmt            : 107
mlhs                 : 64 125
mrhs                 : 74 125
none                 : 17 35 70 78 100 103 112 113 175 180
opt_do               : 88 89
opt_else_stmt        : 87
opt_terms            : 2 14 30 31 32 50 51 87 88 89 111 114
opt_then             : 87 114
primary              : 68 69 80
program              : 0
puts_stmt            : 38 106
statement            : 3 4
statements           : 2 4
stmt                 : 86
str_expr             : 130
term                 : 182 183
terms                : 4 16 28 34 39 77 99 102 181 183
top_stmt             : 5 79 98 99 101 102
top_top_compstmt     : 1
uexpr                : 170

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . top_top_compstmt
    (2) top_top_compstmt -> . statements opt_terms
    (3) statements -> . statement
    (4) statements -> . statements terms statement
    (5) statement -> . top_stmt
    (6) statement -> . func_defn
    (7) statement -> . class_defn
    (8) statement -> . VARIABLES DOT VARIABLES OPEN_PAREN arguments CLOSE_PAREN
    (9) statement -> . VARIABLES DOT VARIABLES OPEN_PAREN CLOSE_PAREN
    (10) statement -> . VARIABLES DOT VARIABLES arguments
    (11) statement -> . CONSTANTS DOT KEYWORD_new OPEN_PAREN arguments CLOSE_PAREN
    (12) statement -> . CONSTANTS DOT KEYWORD_new OPEN_PAREN CLOSE_PAREN
    (13) statement -> . CONSTANTS DOT KEYWORD_new arguments
    (86) top_stmt -> . stmt
    (87) top_stmt -> . KEYWORD_if expr3 opt_then M_1 gen_stmts opt_terms M_2 elsif_tail opt_else_stmt KEYWORD_end M_6
    (88) top_stmt -> . KEYWORD_while M_7 expr3 opt_do M_8 gen_stmts2 opt_terms KEYWORD_end M_9
    (89) top_stmt -> . KEYWORD_for VARIABLES KEYWORD_in for_range opt_do M_10 gen_stmts2 opt_terms KEYWORD_end M_11
    (50) func_defn -> . KEYWORD_def fname OPEN_PAREN arguments M_13 CLOSE_PAREN func_stmts opt_terms KEYWORD_end M_14
    (51) func_defn -> . KEYWORD_def fname OPEN_PAREN CLOSE_PAREN M_18 func_stmts opt_terms KEYWORD_end M_15
    (14) class_defn -> . KEYWORD_class CONSTANTS newline class_stmts opt_terms KEYWORD_end
    (104) stmt -> . expr
    (105) stmt -> . expr1
    (106) stmt -> . puts_stmt
    (107) stmt -> . loop_stmt
    (108) stmt -> . exit_stmt
    (109) stmt -> . func_call_stmt
    (110) stmt -> . KEYWORD_return func_ret_arg
    (125) expr -> . mlhs EQUAL mrhs
    (140) expr1 -> . expr3
    (74) puts_stmt -> . KEYWORD_puts mrhs
    (75) puts_stmt -> . KEYWORD_puts expr
    (72) loop_stmt -> . KEYWORD_break
    (73) exit_stmt -> . KEYWORD_exit
    (63) func_call_stmt -> . fname2 OPEN_PAREN call_arg CLOSE_PAREN M_17
    (64) func_call_stmt -> . mlhs EQUAL fname2 OPEN_PAREN call_arg CLOSE_PAREN M_17
    (126) mlhs -> . VARIABLES
    (127) mlhs -> . CONSTANTS
    (128) mlhs -> . array
    (141) expr3 -> . expr3 LOGICALOR expr4
    (142) expr3 -> . expr4
    (66) fname2 -> . VARIABLES
    (67) fname2 -> . CONSTANTS
    (174) array -> . VARIABLES OPEN_BRACKET expr7 CLOSE_BRACKET
    (143) expr4 -> . expr4 LOGICALAND expr5
    (144) expr4 -> . expr5
    (145) expr5 -> . expr6 DOUBLEEQUAL expr6
    (146) expr5 -> . expr6 NOTEQUAL expr6
    (147) expr5 -> . expr6
    (148) expr6 -> . expr7 LESSEQUAL expr7
    (149) expr6 -> . expr7 LESS expr7
    (150) expr6 -> . expr7 GREATER expr7
    (151) expr6 -> . expr7 GREATEREQUAL expr7
    (152) expr6 -> . expr7
    (153) expr6 -> . BOOLEAN_CONSTANTS
    (154) expr7 -> . expr7 BITXOR expr8
    (155) expr7 -> . expr7 PIPE expr8
    (156) expr7 -> . expr8
    (157) expr8 -> . expr8 BITAND expr9
    (158) expr8 -> . expr9
    (159) expr9 -> . expr9 SHIFTL expr10
    (160) expr9 -> . expr9 SHIFTR expr10
    (161) expr9 -> . expr10
    (162) expr10 -> . expr10 PLUS expr11
    (163) expr10 -> . expr10 MINUS expr11
    (164) expr10 -> . expr11
    (165) expr11 -> . expr11 MULTIPLY expr13
    (166) expr11 -> . expr11 DIV expr13
    (167) expr11 -> . expr11 MOD expr13
    (168) expr11 -> . expr13
    (169) expr13 -> . OPEN_PAREN expr1 CLOSE_PAREN
    (170) expr13 -> . uexpr INT_CONSTANTS
    (171) expr13 -> . CONSTANTS
    (172) expr13 -> . VARIABLES
    (173) expr13 -> . array
    (175) uexpr -> . none
    (176) uexpr -> . PLUS
    (177) uexpr -> . MINUS
    (178) uexpr -> . BITNOT
    (179) uexpr -> . BITCOMP
    (186) none -> .

    VARIABLES       shift and go to state 22
    CONSTANTS       shift and go to state 46
    KEYWORD_if      shift and go to state 21
    KEYWORD_while   shift and go to state 3
    KEYWORD_for     shift and go to state 44
    KEYWORD_def     shift and go to state 17
    KEYWORD_class   shift and go to state 32
    KEYWORD_return  shift and go to state 14
    KEYWORD_puts    shift and go to state 27
    KEYWORD_break   shift and go to state 41
    KEYWORD_exit    shift and go to state 18
    BOOLEAN_CONSTANTS shift and go to state 9
    OPEN_PAREN      shift and go to state 24
    PLUS            shift and go to state 5
    MINUS           shift and go to state 2
    BITNOT          shift and go to state 33
    BITCOMP         shift and go to state 23
    INT_CONSTANTS   reduce using rule 186 (none -> .)

    statements                     shift and go to state 19
    mlhs                           shift and go to state 1
    func_defn                      shift and go to state 31
    puts_stmt                      shift and go to state 15
    expr11                         shift and go to state 12
    expr13                         shift and go to state 13
    array                          shift and go to state 20
    expr3                          shift and go to state 34
    program                        shift and go to state 4
    expr6                          shift and go to state 36
    statement                      shift and go to state 25
    expr5                          shift and go to state 38
    func_call_stmt                 shift and go to state 26
    expr7                          shift and go to state 6
    expr8                          shift and go to state 39
    fname2                         shift and go to state 45
    expr4                          shift and go to state 37
    exit_stmt                      shift and go to state 42
    expr9                          shift and go to state 40
    none                           shift and go to state 28
    stmt                           shift and go to state 16
    loop_stmt                      shift and go to state 7
    uexpr                          shift and go to state 8
    expr                           shift and go to state 29
    top_top_compstmt               shift and go to state 43
    class_defn                     shift and go to state 30
    expr10                         shift and go to state 11
    expr1                          shift and go to state 35
    top_stmt                       shift and go to state 10

state 1

    (125) expr -> mlhs . EQUAL mrhs
    (64) func_call_stmt -> mlhs . EQUAL fname2 OPEN_PAREN call_arg CLOSE_PAREN M_17

    EQUAL           shift and go to state 47


state 2

    (177) uexpr -> MINUS .

    INT_CONSTANTS   reduce using rule 177 (uexpr -> MINUS .)


state 3

    (88) top_stmt -> KEYWORD_while . M_7 expr3 opt_do M_8 gen_stmts2 opt_terms KEYWORD_end M_9
    (93) M_7 -> .

    BOOLEAN_CONSTANTS reduce using rule 93 (M_7 -> .)
    OPEN_PAREN      reduce using rule 93 (M_7 -> .)
    CONSTANTS       reduce using rule 93 (M_7 -> .)
    VARIABLES       reduce using rule 93 (M_7 -> .)
    PLUS            reduce using rule 93 (M_7 -> .)
    MINUS           reduce using rule 93 (M_7 -> .)
    BITNOT          reduce using rule 93 (M_7 -> .)
    BITCOMP         reduce using rule 93 (M_7 -> .)
    INT_CONSTANTS   reduce using rule 93 (M_7 -> .)

    M_7                            shift and go to state 48

state 4

    (0) S' -> program .



state 5

    (176) uexpr -> PLUS .

    INT_CONSTANTS   reduce using rule 176 (uexpr -> PLUS .)


state 6

    (148) expr6 -> expr7 . LESSEQUAL expr7
    (149) expr6 -> expr7 . LESS expr7
    (150) expr6 -> expr7 . GREATER expr7
    (151) expr6 -> expr7 . GREATEREQUAL expr7
    (152) expr6 -> expr7 .
    (154) expr7 -> expr7 . BITXOR expr8
    (155) expr7 -> expr7 . PIPE expr8

    LESSEQUAL       shift and go to state 54
    LESS            shift and go to state 51
    GREATER         shift and go to state 50
    GREATEREQUAL    shift and go to state 49
    DOUBLEEQUAL     reduce using rule 152 (expr6 -> expr7 .)
    NOTEQUAL        reduce using rule 152 (expr6 -> expr7 .)
    LOGICALAND      reduce using rule 152 (expr6 -> expr7 .)
    LOGICALOR       reduce using rule 152 (expr6 -> expr7 .)
    DELIM           reduce using rule 152 (expr6 -> expr7 .)
    newline         reduce using rule 152 (expr6 -> expr7 .)
    $end            reduce using rule 152 (expr6 -> expr7 .)
    KEYWORD_elsif   reduce using rule 152 (expr6 -> expr7 .)
    KEYWORD_else    reduce using rule 152 (expr6 -> expr7 .)
    KEYWORD_end     reduce using rule 152 (expr6 -> expr7 .)
    KEYWORD_then    reduce using rule 152 (expr6 -> expr7 .)
    CLOSE_PAREN     reduce using rule 152 (expr6 -> expr7 .)
    KEYWORD_do      reduce using rule 152 (expr6 -> expr7 .)
    BITXOR          shift and go to state 53
    PIPE            shift and go to state 52


state 7

    (107) stmt -> loop_stmt .

    DELIM           reduce using rule 107 (stmt -> loop_stmt .)
    newline         reduce using rule 107 (stmt -> loop_stmt .)
    KEYWORD_end     reduce using rule 107 (stmt -> loop_stmt .)
    KEYWORD_elsif   reduce using rule 107 (stmt -> loop_stmt .)
    KEYWORD_else    reduce using rule 107 (stmt -> loop_stmt .)
    $end            reduce using rule 107 (stmt -> loop_stmt .)


state 8

    (170) expr13 -> uexpr . INT_CONSTANTS

    INT_CONSTANTS   shift and go to state 55


state 9

    (153) expr6 -> BOOLEAN_CONSTANTS .

    DOUBLEEQUAL     reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    NOTEQUAL        reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    LOGICALAND      reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    LOGICALOR       reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    DELIM           reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    newline         reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    $end            reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    KEYWORD_elsif   reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    KEYWORD_else    reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    KEYWORD_end     reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    KEYWORD_then    reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    CLOSE_PAREN     reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)
    KEYWORD_do      reduce using rule 153 (expr6 -> BOOLEAN_CONSTANTS .)


state 10

    (5) statement -> top_stmt .

    DELIM           reduce using rule 5 (statement -> top_stmt .)
    newline         reduce using rule 5 (statement -> top_stmt .)
    $end            reduce using rule 5 (statement -> top_stmt .)


state 11

    (161) expr9 -> expr10 .
    (162) expr10 -> expr10 . PLUS expr11
    (163) expr10 -> expr10 . MINUS expr11

    SHIFTL          reduce using rule 161 (expr9 -> expr10 .)
    SHIFTR          reduce using rule 161 (expr9 -> expr10 .)
    BITAND          reduce using rule 161 (expr9 -> expr10 .)
    LESSEQUAL       reduce using rule 161 (expr9 -> expr10 .)
    LESS            reduce using rule 161 (expr9 -> expr10 .)
    GREATER         reduce using rule 161 (expr9 -> expr10 .)
    GREATEREQUAL    reduce using rule 161 (expr9 -> expr10 .)
    BITXOR          reduce using rule 161 (expr9 -> expr10 .)
    PIPE            reduce using rule 161 (expr9 -> expr10 .)
    DOUBLEEQUAL     reduce using rule 161 (expr9 -> expr10 .)
    NOTEQUAL        reduce using rule 161 (expr9 -> expr10 .)
    LOGICALAND      reduce using rule 161 (expr9 -> expr10 .)
    LOGICALOR       reduce using rule 161 (expr9 -> expr10 .)
    DELIM           reduce using rule 161 (expr9 -> expr10 .)
    newline         reduce using rule 161 (expr9 -> expr10 .)
    $end            reduce using rule 161 (expr9 -> expr10 .)
    KEYWORD_end     reduce using rule 161 (expr9 -> expr10 .)
    KEYWORD_then    reduce using rule 161 (expr9 -> expr10 .)
    CLOSE_PAREN     reduce using rule 161 (expr9 -> expr10 .)
    KEYWORD_elsif   reduce using rule 161 (expr9 -> expr10 .)
    KEYWORD_else    reduce using rule 161 (expr9 -> expr10 .)
    KEYWORD_do      reduce using rule 161 (expr9 -> expr10 .)
    CLOSE_BRACKET   reduce using rule 161 (expr9 -> expr10 .)
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57


state 12

    (164) expr10 -> expr11 .
    (165) expr11 -> expr11 . MULTIPLY expr13
    (166) expr11 -> expr11 . DIV expr13
    (167) expr11 -> expr11 . MOD expr13
